@startuml
interface TaskProcessor [[java:org.lakehouse.taskexecutor.api.processor.TaskProcessor]] {
	runTask(sourceConfDTO: SourceConfDTO, scheduledTaskDTO: ScheduledTaskDTO, jinJavaUtils: JinJavaUtils): void
}
interface TaskProcessor {
}
TaskProcessor <|.. AbstractTaskProcessor
class JdbcTaskProcessor [[java:org.lakehouse.taskexecutor.processor.jdbc.JdbcTaskProcessor]] {
	-logger: Logger
	-applicationContext: ConfigurableApplicationContext
	+JdbcTaskProcessor(applicationContext: ConfigurableApplicationContext)
	+runTask(sourceConfDTO: SourceConfDTO, scheduledTaskDTO: ScheduledTaskDTO, jinJavaUtils: JinJavaUtils): void
}
abstract class AbstractTaskProcessor [[java:org.lakehouse.taskexecutor.processor.AbstractTaskProcessor]] {
	+AbstractTaskProcessor()
	#sleep(ms: long): void
}

TaskProcessor <|.. JdbcTaskProcessor
class SparkStandAloneClusterTaskProcessor [[java:org.lakehouse.taskexecutor.processor.spark.SparkStandAloneClusterTaskProcessor]] {
	-logger: Logger
	-restConfUrl: String
	-restSchedulerUrl: String
	-MAIN_CLASS_KEY: String = "deploy.mainClass"
	-APP_RESOURCE_KEY: String = "deploy.appResource"
	-CLUSTER_URL_KEY: String = "deploy.clusterUrl"
	-restClientBuilder: RestClient.Builder
	-sparkJobStatusCheckIntervalMs: Integer
	-maxWaitToRunningStateTimeoutMs: long
	-DRIVER_STATE_NULL_LIMIT: int = 30
	-finalStatusNames: List<String>
	-negativeStatusNames: List<String>
	+SparkStandAloneClusterTaskProcessor(restClientBuilder: RestClient.Builder, restConfUrl: String, restSchedulerUrl: String, sparkJobStatusCheckIntervalMs: Integer, maxWaitToRunningStateTimeoutMs: long)
	+runTask(sourceConfDTO: SourceConfDTO, scheduledTaskDTO: ScheduledTaskDTO, jinJavaUtils: JinJavaUtils): void
	+getMasterUrl(scheduledTaskDTO: ScheduledTaskDTO): String
	+isStatusFinal(statusName: String): boolean
	+isStatusNegative(statusName: String): boolean
	+buildSparkRestClientApi(baseURI: String): SparkRestClientApi
	-deploy(mainClass: String, appResource: String, severUrl: String, sparkProperties: Map<String,String>, sparkArgs: List<String>): void
}
class AbstractTaskProcessor {
}
AbstractTaskProcessor <|-- SparkStandAloneClusterTaskProcessor
class LockedStateTaskProcessor [[java:org.lakehouse.taskexecutor.processor.state.LockedStateTaskProcessor]] {
	-logger: Logger
	+LockedStateTaskProcessor(stateRestClientApi: StateRestClientApi)
	+runTask(sourceConfDTO: SourceConfDTO, scheduledTaskDTO: ScheduledTaskDTO, jinJavaUtils: JinJavaUtils): void
}
class AbstractStateTaskProcessor {
}
AbstractStateTaskProcessor <|-- LockedStateTaskProcessor
abstract class AbstractStateTaskProcessor [[java:org.lakehouse.taskexecutor.processor.state.AbstractStateTaskProcessor]] {
	-logger: Logger
	-stateRestClientApi: StateRestClientApi
	+AbstractStateTaskProcessor(stateRestClientApi: StateRestClientApi)
	+getStateRestClientApi(): StateRestClientApi
}
class AbstractTaskProcessor {
}
AbstractTaskProcessor <|-- AbstractStateTaskProcessor
class SuccessStateTaskProcessor [[java:org.lakehouse.taskexecutor.processor.state.SuccessStateTaskProcessor]] {
	-logger: Logger
	+SuccessStateTaskProcessor(stateRestClientApi: StateRestClientApi)
	+runTask(sourceConfDTO: SourceConfDTO, scheduledTaskDTO: ScheduledTaskDTO, jinJavaUtils: JinJavaUtils): void
}
class AbstractStateTaskProcessor {
}
AbstractStateTaskProcessor <|-- SuccessStateTaskProcessor
class DependencyCheckStateTaskProcessor [[java:org.lakehouse.taskexecutor.processor.state.DependencyCheckStateTaskProcessor]] {
	-logger: Logger
	+DependencyCheckStateTaskProcessor(stateRestClientApi: StateRestClientApi)
	-getStates(dataSetKeyName: String, intervalStartDateTime: String, intervalEndDateTime: String): List<DataSetStateDTO>
	-pass(dataSetStateDTO: DataSetStateDTO, scheduledTaskDTO: ScheduledTaskDTO): boolean
	+runTask(sourceConfDTO: SourceConfDTO, scheduledTaskDTO: ScheduledTaskDTO, jinJavaUtils: JinJavaUtils): void
}
class AbstractStateTaskProcessor {
}
AbstractStateTaskProcessor <|-- DependencyCheckStateTaskProcessor

class K8sSparkNativeTaskProcessor implements TaskProcessor{}
@enduml